@@ -90,26 +90,6 @@ class TestTable(unittest.TestCase):
         self.assertEqual(new_table.rows[1], [2, 3, 'b'])
         self.assertEqual(new_table.rows[2], [None, 2, 'c'])
 
-    def test_filter(self):
-        table = journalism.Table(self.rows, self.column_types, self.column_names)
-
-        new_table = table.filter(lambda r: r['one'] in [2, None])
-
-        self.assertIsNot(new_table, table)
-        self.assertEqual(len(new_table.rows), 2)
-        self.assertEqual(new_table.rows[0], [2, 3, 'b'])
-        self.assertEqual(new_table.columns['one'], [2, None])
-
-    def test_reject(self):
-        table = journalism.Table(self.rows, self.column_types, self.column_names)
-
-        new_table = table.reject(lambda r: r['one'] in [2, None])
-
-        self.assertIsNot(new_table, table)
-        self.assertEqual(len(new_table.rows), 1)
-        self.assertEqual(new_table.rows[0], [1, 4, 'a'])
-        self.assertEqual(new_table.columns['one'], [1])
-
     def test_select(self):
         table = journalism.Table(self.rows, self.column_types, self.column_names)
 
@@ -130,17 +110,17 @@ class TestTable(unittest.TestCase):
     def test_where(self):
         table = journalism.Table(self.rows, self.column_types, self.column_names)
 
-        new_table = table.where('one', lambda x: x is not None)
+        new_table = table.where(lambda r: r['one'] in [2, None])
 
         self.assertIsNot(new_table, table)
         self.assertEqual(len(new_table.rows), 2)
-        self.assertEqual(new_table.rows[0], [1, 4, 'a'])
-        self.assertEqual(new_table.rows[1], [2, 3, 'b'])
+        self.assertEqual(new_table.rows[0], [2, 3, 'b'])
+        self.assertEqual(new_table.columns['one'], [2, None])
 
     def test_chain_select_where(self):
         table = journalism.Table(self.rows, self.column_types, self.column_names)
 
-        new_table = table.select(['one', 'two']).where('two', lambda r: r == 3)
+        new_table = table.select(['one', 'two']).where(lambda r: r['two'] == 3)
 
         self.assertEqual(len(new_table.rows), 1)
         self.assertEqual(new_table.rows[0], [2, 3])
